# Ticket_system_inhouse

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml
alembic/: env.py
alembic/versions/: a1d170ac4268_initial_create_of_tables.py
app/: database.py  db_model.py  main.py  oauth_utils.py  schemas.py  settings.py  utils.py
app/routers/: auth.py  devs.py  tickets.py  users.py
test/: database_fixture.py  test_api_entry.py  test_api_operation.py  test_database_creation.py  test_devs.py  test_python.py  test_tickets.py  test_users.py
