[tool.poetry]
name = "inhouse-ticket-app"
version = "0.1.0"
description = "this is an implementation of inhouse ticketting app"
authors = ["AVNG <nguyen.vuan@wisseninfotech.com>"]
license = "AGPL-3.0 license"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.1"
fastapi = { extras = ["standard"], version = "^0.114.1" }
pytest = "^8.3.3"
PyYAML = "^6.0.2"
uvicorn = { extras = ["standard"], version = "^0.29.0" }
pydantic = "^2.9.1"
sqlalchemy = "^2.0.34"
sqlmodel = "^0.0.22"
pg8000 = "^1.31.2"
psycopg = { extras = ["binary"], version = "^3.2.2" }
alembic = "^1.13.2"

[tool.poetry.group.dev.dependencies]
flake9 = "^3.8.3.post2"
black = "^24.4.2"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 81
target-version = ['py311']
